[gd_scene load_steps=14 format=2]

[ext_resource path="res://Video Presentacion.ogv" type="VideoStream" id=1]
[ext_resource path="res://Scripts/Introduccion.gd" type="Script" id=2]
[ext_resource path="res://Shaders/Introduccion.shader" type="Shader" id=3]
[ext_resource path="res://Sprites/bizarrepair_text.png" type="Texture" id=4]
[ext_resource path="res://Sounds/Buttons/Start 02.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/botones/boton_play2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/botones/boton_play1.png" type="Texture" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )

[sub_resource type="Theme" id=2]

[sub_resource type="InputEventAction" id=3]
action = "ui_accept"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/edit-undo/editundo.ttf"

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 22
font_data = SubResource( 5 )

[node name="Introduccion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.78955
margin_bottom = -2.78955
color = Color( 0.294118, 0.372549, 0.819608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -500.0
margin_right = 500.0
margin_bottom = 500.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 296, 632 )
stream = ExtResource( 5 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 1 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 180.0
margin_right = 100.0
margin_bottom = 380.0
theme = SubResource( 2 )
shortcut = SubResource( 4 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labelg1" type="Label" parent="Tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -328.5
margin_right = 450.0
margin_bottom = 328.5
custom_fonts/font = SubResource( 6 )
text = "Muy bien Stevie... Sabemos que trabajas mucho y cobras poco. Pero tienes que seguir con tu deber de crear mundos, el universo no se llenara solo."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttont1" type="TextureButton" parent="Tutorial"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -210.0
margin_right = -10.0
margin_bottom = -10.0
shortcut = SubResource( 4 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial2" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labelt2" type="Label" parent="Tutorial2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -328.5
margin_right = 450.0
margin_bottom = 328.5
custom_fonts/font = SubResource( 6 )
text = "De ti depende que las cosas sean un éxito o un desastre. Por lo que tienes que arreglar los elementos que componen los planetas con su herramienta correspondiente..."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttont2" type="TextureButton" parent="Tutorial2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -210.0
margin_right = -10.0
margin_bottom = -10.0
shortcut = SubResource( 4 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial3" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labelt3" type="Label" parent="Tutorial3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -328.5
margin_right = 450.0
margin_bottom = 328.5
custom_fonts/font = SubResource( 6 )
text = "Pero ni nosotros sabemos qué cosa es que o con que se arregla, asi que tendras que averiguarlo. Me sorprende que esta empresa no se haya fundido ya.

Suerte."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttont3" type="TextureButton" parent="Tutorial3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -210.0
margin_right = -10.0
margin_bottom = -10.0
shortcut = SubResource( 4 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="button_down" from="Tutorial/Buttont1" to="." method="_on_Buttont1_button_down"]
[connection signal="button_up" from="Tutorial/Buttont1" to="." method="_on_Buttont1_button_up"]
[connection signal="button_down" from="Tutorial2/Buttont2" to="." method="_on_Buttont2_button_down"]
[connection signal="button_up" from="Tutorial2/Buttont2" to="." method="_on_Buttont2_button_up"]
[connection signal="button_down" from="Tutorial3/Buttont3" to="." method="_on_Buttont3_button_down"]
[connection signal="button_up" from="Tutorial3/Buttont3" to="." method="_on_Buttont3_button_up"]
